[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/playerShip3_blue.png" type="Texture" id=1]
[ext_resource path="res://scenes/player.gd" type="Script" id=2]
[ext_resource path="res://sounds/classic/thrust.wav" type="AudioStream" id=3]
[ext_resource path="res://sprites/fire/fire03.png" type="Texture" id=4]
[ext_resource path="res://sounds/classic/bangSmall.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/sfx_zap.ogg" type="AudioStream" id=6]
[ext_resource path="res://sprites/shield1.png" type="Texture" id=7]
[ext_resource path="res://sounds/sfx_shieldDown.ogg" type="AudioStream" id=8]
[ext_resource path="res://sounds/sfx_shieldUp.ogg" type="AudioStream" id=9]

[node name="player" type="Area2D"]
scale = Vector2( 0.4, 0.25 )
script = ExtResource( 2 )

[node name="shield" type="Node2D" parent="."]

[node name="shield_bottom_part" type="Sprite" parent="shield"]
position = Vector2( -7.5, 16 )
rotation = -3.14159
texture = ExtResource( 7 )
offset = Vector2( -1.97, 0.762 )

[node name="shield_upper_part" type="Sprite" parent="shield"]
position = Vector2( -2.5, -16 )
texture = ExtResource( 7 )
offset = Vector2( -1.97, 0.762 )

[node name="thruster_sprite" type="Sprite" parent="."]
position = Vector2( -39.2, 0 )
rotation = 1.5708
scale = Vector2( 2.86808, 1.6785 )
texture = ExtResource( 4 )

[node name="ship_sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
rotation = 1.5708
scale = Vector2( 0.95, 0.95 )
polygon = PoolVector2Array( 4, -37, 6, -30, 9, -24, 12.9, -18.5, 48, 22, 48, 28, 41, 28, 24, 27.4, 13, 37, -14, 37, -22, 28, -37, 28, -45, 28, -49, 26, -49, 22, -12, -21, -9, -25, -7, -30, -4, -37 )

[node name="game_over_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="invincibilty_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="sfx" type="Node2D" parent="."]

[node name="thruster_sound" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 0.5

[node name="ship_explosion_sound" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 0.75

[node name="shield_sound" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource( 6 )
pitch_scale = 0.45

[node name="shield_up" type="AudioStreamPlayer2D" parent="sfx"]
position = Vector2( 2.5, 0 )
stream = ExtResource( 9 )
volume_db = 5.0
pitch_scale = 0.45

[node name="shield_down" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource( 8 )
volume_db = 5.0
pitch_scale = 0.45

[connection signal="timeout" from="game_over_timer" to="." method="_on_game_over_timer_timeout"]
[connection signal="timeout" from="invincibilty_timer" to="." method="_on_invincibilty_timer_timeout"]
